Empezando la realización de API de peliculas con GraphQL